[package]
name = "hakufile"
version = "0.3.1"
authors = ["Vladimir Markelov <vmatroskin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
pest = "2.0"
pest_derive = "2.0"
target = "1.0"
thiserror = "1.0"
chrono = "0.4"
dirs = "2.0"
rand = "0.7"
unicode-width = "0.1"
regex = "1"