[package]
name = "hakufile"
version = "0.3.1"
authors = ["Vladimir Markelov <vmatroskin@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A command runner - a handy way to execute project specific tasks"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["terminal", "cli", "utility", "command", "runner"]
repository = "https://github.com/VladimirMarkelov/haku"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
pest = "2.0"
pest_derive = "2.0"
target = "1.0"
thiserror = "1.0"
chrono = "0.4"
dirs = "2.0"
rand = "0.7"
unicode-width = "0.1"
regex = "1"

[package.metadata.deb]
section = "utility"
depends = "$auto"
priority = "optional"
assets = [
	["target/release/haku", "usr/bin/", "755"],
	["LICENSE", "usr/share/doc/haku/", "644"],
	["docs/usage.md", "usr/share/doc/haku/README", "644"],
]
extended-description = """\
A command runner - a handy way to execute project- or directory-specific tasks.\
"""
changelog = "changelog"
