[package]
name = "hakufile"
version = "0.1.0"
authors = ["Vladimir Markelov <vmatroskin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
target = "1.0"
thiserror = "1.0"
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
fern = "0.5"
dirs = "2.0"